# crocrs

./: .clippy.toml  .rustfmt.toml  Cargo.toml  justfile
.cargo/: config.toml
crates/croc/: Cargo.toml
crates/croc/src/: comm.rs  croc.rs  crypt.rs  main.rs  model.rs  utils.rs
crates/croc/src/cli/: mod.rs  receive.rs  send.rs
crates/croc/src/tcp/: mod.rs
crates/peerdiscovery/: Cargo.toml
crates/peerdiscovery/src/: internal.rs  lib.rs  listener.rs  peerdiscovery.rs
